# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2018-03-03 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Switched release management from sourceforge.net to osdn.net
      because SourceForge has had an outage for more than 78 hours

2018-02-27 Michael Truog   <mjtruog [at] gmail (dot) com>

    * CloudI version 1.7.3 released

2018-02-26 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update nodefinder

2018-02-24 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add events_subscribe/3 events_subscribe/4 events_clear/3 functions
      to cloudi_crdt for providing events to the CloudI service process
    * Add member_all/2 function to cloudi_lists

2018-02-23 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Get compilation with Erlang/OTP 21 working
    * Add function cloudi_lists:iodata_to_list/1
    * Add functions findl/2 findr/2 join/2 lowercase/1 split/2
      titlecase/1 trim/1 trim/2 triml/1 triml/2 trimr/1 trimr/2
      uppercase/1 to cloudi_string
    * Update nodefinder, cgroups, reltool_util, syslog_socket

2018-02-21 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add the cloudi_crdt:update functions
    * Add the cloudi_crdt:byte_size function
    * Improve cloudi_service:get_pids type specification
    * Add the cloudi_queue:byte_size functions
    * Change the cloudi_queue:size/1 and cloudi_queue:failures/1
      functions to cloudi_queue:size/2 and cloudi_queue:failures/2
    * Update cpg

2018-02-20 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add bootstrap and clean_vclocks functionality to cloudi_crdt
      so the CloudI service processes that utilize it may
      restart, start, or fail without affecting its operation
    * Fix external CloudI service Erlang process viewing with
      the format_status/2 callback due to gen_fsm/gen_statem difference

2018-02-17 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix automake subdirs use for distclean