@@ -3,22 +3,16 @@
 
 OCAMLDEPS_NUM = \
     arith_flags.cmi \
-    arith_flags.cmx \
     arith_status.cmi \
-    arith_status.cmx \
     big_int.cmi \
-    big_int.cmx \
     int_misc.cmi \
-    int_misc.cmx \
     nat.cmi \
-    nat.cmx \
     num.cmi \
-    num.cmx \
     ratio.cmi \
-    ratio.cmx \
     libnums.a \
     nums.a \
-    nums.cmxa
+    nums.cmxa \
+    nums.cma
 CLEANFILES = $(OCAMLDEPS_NUM)
 
 nums.cmxa:
@@ -27,7 +21,7 @@ nums.cmxa:
             OCAMLOPT="$(OCAMLOPT)" \
             OCAMLDEP="$(OCAMLDEP)" \
             OCAMLMKLIB="$(OCAMLMKLIB)" \
-            nums.cmxa libnums.a && \
+            nums.cmxa nums.cma libnums.a && \
     cp $(OCAMLDEPS_NUM) $(abs_builddir)
 
 all-local: nums.cmxa
