@@ -6,8 +6,7 @@ CLEANFILES = count_ocaml main.cmx main.cmi main.o
 OCAMLDEPS = str.cmxa unix.cmxa threads/threads.cmxa \
             $(top_builddir)/api/ocaml/external/nums.cmxa \
             -ccopt -L$(top_builddir)/api/ocaml/external/ \
-            $(top_builddir)/api/ocaml/erlang.cmx \
-            $(top_builddir)/api/ocaml/cloudi.cmx
+            $(top_builddir)/api/ocaml/cloudi.cmxa
 SUFFIXES = .ml .cmx
 
 all-local: count_ocaml
