@@ -1,6 +1,11 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fenc=utf-8 sts=4 ts=4 et nomod:
 
+2018-03-05 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * Fix OCaml CloudI API installation to use archives
+      (both native and bytecode)
+
 2018-03-03 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Switched release management from sourceforge.net to osdn.net
